--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource-variable/onest": "^5.0.2",
     "@fontsource/onest": "^5.0.2",
     "astro": "^4.0.8",
+    "flowbite": "^2.2.1",
     "haunted": "^5.0.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
